--- a/consent-ui/package.json
+++ b/consent-ui/package.json
@@ -19,55 +19,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "angular-iban": "^0.2.0",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
+    "@ngtools/webpack": "^9.1.12",
+    "angular-iban": "^2.0.4",
     "angular2-uuid": "^1.1.1",
-    "angularx-qrcode": "^2.1.4",
-    "bootstrap": "^4.4.1",
+    "angularx-qrcode": "^2.3.5",
+    "bootstrap": "^4.5.2",
     "iban": "0.0.14",
-    "ng-http-loader": "^6.0.1",
+    "jquery": "^3.5.1",
+    "ng-http-loader": "^7.0.0",
     "ng-swagger-gen": "^2.2.0",
     "ng2-simple-timer": "^9.1.0",
     "ngx-chiptan": "^0.1.4",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
     "uuidv4": "^6.0.6",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^14.10.1",
     "codelyzer": "^5.0.0",
     "husky": "^4.2.3",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma": "^5.2.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.6.5"
   },
   "husky": {
     "hooks": {
